--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,11 +15,11 @@
   <body>
     <% if current_user %>
       Logged in as <%= current_user.email %>
-      <%= link_to "Log Out", logout_path, method: "delete" %>
+      <%= link_to "Log Out", logout_path, method: "delete", :class => "tiny success button" %>
       <% else %>
 
     <%= link_to "Sign Up", signup_path, :class => "tiny button" %>
-    <%= link_to "Log In", login_path, :class => "tiny success button" %>
+    <%= link_to "Log In", login_path, :class => "tiny button" %>
       <% end %>
 
       <%= flash[:alert] %>
