--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,1 +1,7 @@
 <h1> Profile page </h1>
+
+<p> Welcome to your Profile </p>
+
+Howdy <%= @profile.name %>
+
+<%= link_to "Edit Info", edit_profile_path(@profile) %>
