--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -7,10 +7,12 @@
   </ul>
 <% end %>
 
-<%= form_for(object) do |f| %>
+<%= form_for object, :url => profile_path, :html => { :multipart => true } do |form| %>
   <div class="form-group">
-    <%= f.label :name %>
-    <%= f.text_field :name %>
+    <%= form.label :name %>
+    <%= form.text_field :name %>
 
-  <%= f.submit(:class => "tiny button") %>
+
+  <%= form.file_field :avatar %>
+  <%= form.submit(:class => "tiny button") %>
 <% end %>
